force-app/main/default/objects/LLC_BI__Application__c/fields/cm_Manual_Review_Required__c.field-meta.xml
<CustomField>
    <fullName>cm_Manual_Review_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated via the Display Offers flow if Manual Review is required for a online application loan.</description>
    <label>Manual Review Required</label>
    <type>Checkbox</type>
</CustomField>