force-app/main/default/objects/LLC_BI__Application__c/fields/Context_Complete__c.field-meta.xml
<CustomField>
    <fullName>Context_Complete__c</fullName>
    <label>Context Complete</label>
    <summarizedField>nPortal__Context__c.nPortal__Context_Complete__c</summarizedField>
    <summaryForeignKey>nPortal__Context__c.nPortal__Application__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>