force-app/main/default/objects/LLC_BI__Application__c/fields/Context_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Context_Start_Time__c</fullName>
    <label>Context Start Time</label>
    <summarizedField>nPortal__Context__c.nPortal__Context_Start__c</summarizedField>
    <summaryForeignKey>nPortal__Context__c.nPortal__Application__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>