force-app/main/default/objects/LLC_BI__Application__c/fields/Minutes_to_complete__c.field-meta.xml
<CustomField>
    <fullName>Minutes_to_complete__c</fullName>
    <formula>( Context_Complete__c - Context_Start_Time__c )*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minutes to complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>