force-app/main/default/objects/LLC_BI__Application__c/fields/Online_Application_Object__c.field-meta.xml
<CustomField>
    <fullName>Online_Application_Object__c</fullName>
    <label>Online Application Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>