force-app/main/default/objects/LLC_BI__Application__c/fields/Primary_Applicant_email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Applicant_email__c</fullName>
    <formula>nPortal__Applicant__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Applicant email</label>
    <type>Text</type>
</CustomField>