force-app/main/default/objects/LLC_BI__Application__c/fields/Product_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Product_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>LLC_BI__Product__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>